<resources>
    <string name="app_name">Kimball-A2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_c">Fragment C</string>
    <string name="fragment_d">Fragment D</string>

    <string name="hello_blank_fragment">test</string>
    <string name="load_fragment2">Load Fragment 2</string>
    <string name="load_fragment3">Load Fragment 3</string>
    <string name="load_fragment4">Load Fragment 4</string>
    <string name="switch_button">Switch 3/4</string>

</resources>
